<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_primary_gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/content_padding">

            <TextView
                android:layout_width="@dimen/splash_logo_size"
                android:layout_height="@dimen/splash_logo_size"
                android:background="@drawable/bg_white_round_16"
                android:gravity="center"
                android:text="📍"
                android:textSize="42sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2xl"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/app_subtitle"
                android:textColor="#CCFFFFFF"
                android:textSize="13sp" />

            <ProgressBar
                android:id="@+id/progress_loading"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="@dimen/splash_progress_width"
                android:layout_height="@dimen/bottom_sheet_handle_height"
                android:layout_marginTop="@dimen/space_4xl"
                android:max="100"
                android:progress="0"
                android:progressTint="@color/white"
                android:progressBackgroundTint="#40FFFFFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_md"
                android:text="@string/loading"
                android:textColor="#A6FFFFFF"
                android:textSize="12sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="@dimen/space_4xl"
            android:text="© 2025 TourCrowd Korea"
            android:textColor="#80FFFFFF"
            android:textSize="11sp" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
